[package]
name = "do_util"
description = "Discrete Optimization utilitary library (data-structures)"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "do_util"
crate-type = ["rlib"]

[dependencies]

# [profile.test]
# opt-level=3 # optimized for quick test on performance (should not be used by default)

[profile.release]
debug = true # to be removed eventually
#### optimizations for faster run (compile-time longer)
# lto = "fat" # optimize over all crates at once (more program speed, longer compile time)
# codegen-units = 1 # do not split to compile faster (more program speed, longer compile time)
# target-cpu="native" # optimizes for this cpu
# panic = "abort" # better cache usage related to panics